# shkyera-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  ____init_____8py.html  _a_a_b_b_8cpp.html  _a_a_b_b_8cpp.js  _a_a_b_b_8cpp__incl.map  _a_a_b_b_8cpp__incl.md5  _a_a_b_b_8hpp.html  _a_a_b_b_8hpp.js  _a_a_b_b_8hpp__dep__incl.map  _a_a_b_b_8hpp__dep__incl.md5  _a_a_b_b_8hpp__incl.map  _a_a_b_b_8hpp__incl.md5  _a_a_b_b_8hpp_source.html  _ambient_light_component_8hpp.html  _ambient_light_component_8hpp.js  _ambient_light_component_8hpp__dep__incl.map  _ambient_light_component_8hpp__dep__incl.md5  _ambient_light_component_8hpp__incl.map  _ambient_light_component_8hpp__incl.md5  _ambient_light_component_8hpp_source.html  _ambient_light_component_u_i_8cpp.html  _ambient_light_component_u_i_8cpp__incl.map  _ambient_light_component_u_i_8cpp__incl.md5  _ambient_light_component_u_i_8hpp.html  _ambient_light_component_u_i_8hpp.js  _ambient_light_component_u_i_8hpp__incl.map  _ambient_light_component_u_i_8hpp__incl.md5  _ambient_light_component_u_i_8hpp_source.html  _assert_8hpp.html  _assert_8hpp.js  _assert_8hpp__dep__incl.map  _assert_8hpp__dep__incl.md5  _assert_8hpp__incl.map  _assert_8hpp__incl.md5  _assert_8hpp_source.html  _asset_8hpp.html  (+2598 more)
docs/: doxygen-awesome-interactive-toc.js  doxygen-awesome.css  footer.html  header.html  layout.xml
resources/: object.py
src/AssetManager/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  Audio.cpp  Audio.hpp  CMakeLists.txt  CubeMap.cpp  CubeMap.hpp  Filesystem.cpp  Filesystem.hpp  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  PathConstructibleAsset.hpp  Shader.cpp  Shader.hpp  Sound.cpp  Sound.hpp  Texture.cpp  Texture.hpp  Wireframe.cpp  Wireframe.hpp
src/Common/: Assert.hpp  BiMap.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  InstanceCounter.hpp  Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp  Random.cpp  Random.hpp  SIMD.hpp  SIMDArm.cpp  Serialization.hpp  TypeInfo.hpp  Types.hpp
src/Components/: AmbientLightComponent.hpp  AudioSourceComponent.hpp  BaseComponent.hpp  BillboardComponent.hpp  BoxColliderComponent.hpp  CMakeLists.txt  CameraComponent.hpp  CameraTags.hpp  DirectionalLightComponent.hpp  Environment.hpp  GizmoHandleComponent.hpp  LoggingComponent.hpp  MeshComponent.hpp  ModelComponent.hpp  NameComponent.hpp  OverlayModelComponent.hpp  ParticleEmitterComponent.hpp  PointLightComponent.hpp  PostProcessingVolumeComponent.hpp  RenderingTextureComponent.hpp  SceneCamera.hpp  SelectedEntityComponent.hpp  SkyboxComponent.hpp  SpotLightComponent.hpp  TextureComponent.hpp  TransformComponent.hpp  TriangleComponent.hpp  WireframeComponent.hpp
src/Components/AssetComponents/: AssetComponent.hpp  AssetLoader.hpp  AssetRoot.hpp  DirectoryComponent.hpp  SelectedAssetComponent.hpp
src/Math/: AABB.cpp  AABB.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Ray.cpp  Ray.hpp  Utils.cpp  Utils.hpp
src/Rendering/: CMakeLists.txt  CubeMap.cpp  CubeMap.hpp  FrameBuffer.cpp  FrameBuffer.hpp  OpenGLResource.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp
src/Rendering/FrameBuffers/: DepthAtlasFrameBuffer.cpp  DepthAtlasFrameBuffer.hpp  DepthCubeMapFrameBuffer.cpp  DepthCubeMapFrameBuffer.hpp  DepthFrameBuffer.cpp  DepthFrameBuffer.hpp  SceneFrameBuffer.cpp  SceneFrameBuffer.hpp
src/Serialization/: Builders.cpp  Builders.hpp  CMakeLists.txt  Registry.proto
src/Systems/: AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  CameraMovementSystem.cpp  CameraMovementSystem.hpp  DevelopmentRendererSystem.cpp  DevelopmentRendererSystem.hpp  GizmoSystem.cpp  GizmoSystem.hpp  ModelRendererSystem.cpp  ModelRendererSystem.hpp  ObjectSelectionSystem.cpp  ObjectSelectionSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  WireframeRendererSystem.cpp  WireframeRendererSystem.hpp
src/ui/: CMakeLists.txt  Component.cpp  Component.hpp  ComponentUI.hpp  Modal.cpp  Modal.hpp  UI.cpp  UI.hpp  UIComponent.cpp  UIComponent.hpp  Widget.cpp  Widget.hpp
src/ui/Common/: AssetSelector.hpp  BooleanSelector.cpp  BooleanSelector.hpp  ColorSelector.cpp  ColorSelector.hpp  EnumSelector.hpp  FileSelector.cpp  FileSelector.hpp  FloatSlider.cpp  FloatSlider.hpp  Style.cpp  Style.hpp  Utils.cpp  Utils.hpp
src/ui/Components/: AmbientLightComponentUI.cpp  AmbientLightComponentUI.hpp  AudioSourceComponentUI.cpp  AudioSourceComponentUI.hpp  BillboardComponentUI.cpp  BillboardComponentUI.hpp  CameraComponentUI.cpp  CameraComponentUI.hpp  DirectionalLightComponentUI.cpp  DirectionalLightComponentUI.hpp  MeshComponentUI.cpp  MeshComponentUI.hpp  ModelComponentUI.cpp  ModelComponentUI.hpp  ParticleEmitterComponentUI.cpp  ParticleEmitterComponentUI.hpp  PointLightComponentUI.cpp  PointLightComponentUI.hpp  PostProcessingVolumeComponentUI.cpp  PostProcessingVolumeComponentUI.hpp  SkyboxComponentUI.cpp  SkyboxComponentUI.hpp  SpotLightComponentUI.cpp  SpotLightComponentUI.hpp  TextureComponentUI.cpp  TextureComponentUI.hpp  TransformComponentUI.cpp  TransformComponentUI.hpp  TriangleComponentUI.cpp  TriangleComponentUI.hpp  WireframeComponentUI.cpp  WireframeComponentUI.hpp
src/ui/components/: ScriptComponent.cpp  ScriptComponent.hpp  ScriptUIComponent.cpp  ScriptUIComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  TransformUIComponent.cpp  TransformUIComponent.hpp
src/ui/components/shapes/: ShapeCircleUIComponent.cpp  ShapeCircleUIComponent.hpp  ShapeLineUIComponent.cpp  ShapeLineUIComponent.hpp  ShapeRectangleUIComponent.cpp  ShapeRectangleUIComponent.hpp  ShapeUIComponent.cpp  ShapeUIComponent.hpp
src/ui/widgets/: ConsoleWidget.cpp  ConsoleWidget.hpp  FilesystemWidget.cpp  FilesystemWidget.hpp  InspectorWidget.cpp  InspectorWidget.hpp  ModalWidget.cpp  ObjectsWidget.cpp  ObjectsWidget.hpp  PreviewWidget.cpp  PreviewWidget.hpp  ProfilerWidget.cpp  ProfilerWidget.hpp  PropertiesWidget.cpp  PropertiesWidget.hpp  RuntimeWidget.cpp  RuntimeWidget.hpp  SceneWidget.cpp  SceneWidget.hpp
(+690 files in other folders)
